--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "formik": "^2.4.1",
-    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.12.1"
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.12.1",
+    "suneditor-react": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
